--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="order_title">Place an Order</string>
     <string name="double_double">Double Double $3.60</string>
     <string name="cheeseburger">Cheeseburger $2.15</string>
-    <string name="french_fries">French Fries $1.65</string>
+    <string name="french_fries">Frites $1.65</string>
     <string name="shakes">Shakes $2.20</string>
     <string name="fountain_drinks">Fountain Drinks (pick size)</string>
     <string name="small">Small $1.45</string>
