--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,7 +4,7 @@
     <string name="cheeseburger">Royale with cheese $2.15</string>
     <string name="double_double">Double Double $3.60</string>
     <string name="fountain_drinks">boissons à la fontaine (choisissez votre taille)</string>
-    <string name="french_fries">French Fries $1.65</string>
+    <string name="french_fries">Frites $1.65</string>
     <string name="items_ordered">"Les articles commandés: "</string>
     <string name="large">Grand $1.75</string>
     <string name="medium">Moyen $1.55</string>
